--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
                 <head>
-                                <title>Akshay Chidura - FrontEnd Developer</title>
+                                <title>Bhalaji A - FrontEnd Developer</title>
 								<meta name="viewport" content="width=device-width, initial-scale=1">
 								<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                                 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -51,7 +51,7 @@
 														<div class="edu_nav_each col-xs-12">
 															Graduation
 															<blockquote>
-																<p>MTech Integrated in software engineering from VIT University with CGPA (scale of 10.0) – 8.17.</p>
+																<p>MTech Integrated in software engineering from VIT University with CGPA (scale of 10.0) â€“ 8.17.</p>
 																<footer>From Chennai</footer>
 															 </blockquote>
 														</div>
