--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
                 <head>
-                                <title>Bhalaji A - FrontEnd Developer</title>
+                                <title>Bhalaji A - Intern</title>
 								<meta name="viewport" content="width=device-width, initial-scale=1">
 								<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                                 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
 				</div>
 </div>
                                 <div class="home_text_left col-xs-12 col-md-9">
-                                                <div class="head_center col-xs-12"><h2>I'm <br><span> A</span>kshay <span>C</span>hidura<br><small>Emerging Full Stack Developer</small></h2></div>
+                                                <div class="head_center col-xs-12"><h2>I'm <br><span> B</span>halaji <span>A</span><br><small>Intern</small></h2></div>
                                 </div>
 <div class="top_nav col-xs-12">
 		<span class="glyphicon glyphicon-menu-down down_icon"></span>
