--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
                                                                 Color Tracking Robot
                                                             </div>
 															<div class="project_description  text-justify">
-                                                                A web portal which can be used by an organisation such as a university to manage
-                                                                programming exams. It features an online compiler that can be used to run the code
-                                                                online.
+                                                               A minibot with a webcam that should sense the selected color and move towards the color. Rashberry
+							       Pi2 modelB was used to make the computation of distances and controlling motors. 								
                                                             </div>
 														  </div>
 														
