--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 														  <div class="item">
 															<div class="project_head">
-                                                                Color Tracking Robot
+                                                                Color Tracking Bot
                                                             </div>
 															<div class="project_description  text-justify">
                                                                A minibot with a webcam that should sense the selected color and move towards the color. Rashberry
